# insta-titan

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  app.py  config.yaml  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
scripts/: generate_session.py
sessions/: memewallah81.session
src/: config_loader.py
src/ai/: engine.py
src/analytics/: tracker.py
src/db/: __init__.py  models.py
src/fetcher/: __init__.py  base.py  bing.py  duckduckgo.py  google_images.py  local.py  orchestrator.py  pexels.py  pixabay.py  reddit.py  rss.py  unsplash.py
src/filter/: __init__.py  content.py
src/notifications/: manager.py  telegram_bot.py
src/poster/: __init__.py  instagram.py
src/processor/: image_processor.py
src/scheduler/: __init__.py  engine.py
src/security/: vault.py
src/social/: automation.py
src/utils/: helpers.py
templates/: analytics.html  base.html  dashboard.html  history.html  logs.html  queue.html  settings.html
tests/: test_core.py  test_fetchers.py  test_security.py
